--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
     <!-- 1. bring into pulgins -->
     <!-- IE needs polyfill -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -19,6 +20,10 @@
   </head>
   <!-- 3. show application -->
   <body>
-    <my-app>Loading...</my-app>
+
+    <eye-homepage>Homepage</eye-homepage>
+    <eye-create>Create</eye-create>
+    <eye-list>List</eye-list>
+    <eye-detail>Detail</eye-detail>
   </body>
 </html>
