--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular2-Diary</title>
+    <title>Angular2-EyE</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0, minimun-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
     <!-- 1. bring into pulgins -->
@@ -20,10 +20,6 @@
   </head>
   <!-- 3. show application -->
   <body>
-
-    <eye-homepage>Homepage</eye-homepage>
-    <eye-create>Create</eye-create>
     <eye-list>List</eye-list>
-    <eye-detail>Detail</eye-detail>
   </body>
 </html>
